--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 * {
+    font-family: 'Fira Sans', sans-serif;
     box-sizing: border-box;
     --main-bg-color: black;
     --red: #DA4322;
@@ -6,107 +7,96 @@
     --yellow: #F5E827;
     --blue: #138ACC;
     --white: white;
-    font-family: 'Fira Sans', sans-serif;
   }
   
   body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
     background-color: var(--main-bg-color);
   }
-  
-  #board {
+
+  main {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    height: 100vmin;
-    width: 100vmin;
-    /* border: 1px solid red; */
-    gap: 2.5vmin;
-    transform: translateX(15vmin);
   }
-  
+
+  main * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .flex-ctr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  section {
+    display: grid;
+    grid-gap: 3vmin;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    /* border: 1px solid red; */
+  }
+
+  section > div {
+    height: 40vmin;
+    width: 40vmin;
+    /* border: 1px solid blue; */
+  }
+
+  #board > .clrbtns:hover {
+    transform: scale(0.97);
+    transition: transform 100ms ease-in;
+    transform: perspective(500px) translateZ(-10px);
+  }
+
   #red {
     background-color: var(--red);
     border-radius: 100% 0 0 0;
-    height: 30vmin;
-    width: 30vmin;
-    order: 1;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
   }
   
   #grn {
     background-color: var(--green);
     border-radius: 0 100% 0 0;
-    height: 30vmin;
-    width: 30vmin;
-    order: 2;
+    grid-column: 3 / span 2;
+    grid-row: 1 / span 2;
   }
   
   #yel {
     background-color: var(--yellow);
     border-radius: 0 0 100% 0;
-    height: 30vmin;
-    width: 30vmin;
-    order: 4;
+    grid-column: 3 / span 2;
+    grid-row: 3 / span 2;
   }
   
   #blu {
     background-color: var(--blue);
     border-radius: 0 0 0 100%;
-    height: 30vmin;
-    width: 30vmin;
-    order: 3;
-  }
-  
-  #red:hover {
-    transform: scale(0.97);
-    transition: transform 100ms ease-in;
-  }
-  
-  #grn:hover {
-    transform: scale(0.97);
-    transition: transform 100ms ease-in;
-  }
-  
-  #yel:hover {
-    transform: scale(0.97);
-    transition: transform 100ms ease-in;
-  }
-  
-  #blu:hover {
-    transform: scale(0.97);
-    transition: transform 100ms ease-in;
-  }
-  
-  #ctrcir {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--white);
-    border-radius: 50%;
-    border: 2.5vmin solid black;
-    height: 30vmin;
-    width: 30vmin;
-    transform: translateX(-32vmin);
+    grid-column: 1 / span 2;
+    grid-row: 3 / span 2;
   }
   
   h1 {
+    color: white;
     font-size: 6vmin;
-    margin-top: 0vmin;
-    margin-bottom: 0vmin;
     font-family: 'Ubuntu', sans-serif;
+  }
+
+  span {
+    color: white;
+    font-size: 3.5vmin;
+    margin: 1vmin;
   }
   
   button {
     text-align: center;
-    width: 12vmin;
-    height: 3vmin;
+    font-size: 3vmin;
+    width: 18vmin;
+    height: 6vmin;
     background-color: darkgrey;
     color: var(--white);
     border: 1px solid grey;
@@ -120,6 +110,61 @@
     background-color: grey;
   }
   
+  #gameControls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2vmin;
+  }
+
   .counts {
     margin-top: 1vmin;
   }
+
+  #ctr {
+    background-color: var(--white);
+    border-radius: 50%;
+    border: 3vmin solid black;
+    grid-column: 2 / span 2;
+    grid-row: 2 / span 2;
+    transform: perspective(500px) translateZ(5px);
+  }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    #gameControls {
+        margin-top: 10vmin;
+        flex-direction: column-reverse;
+    }
+
+    span {
+        font-size: 5vmin;
+    }
+
+    button {
+        width: 30vmin;
+        height: 10vmin;
+        font-size: 5vmin;
+    }
+
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {...}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {...}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    section > div {
+        height: 35vmin;
+        width: 35vmin;
+        /* border: 1px solid blue; */
+      }
+
+      h1 {
+        margin-top: 0;
+      }
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {...}
