fully functional and well styled game

--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,18 @@
     font-family: 'Fira Sans', sans-serif;
     box-sizing: border-box;
     --main-bg-color: black;
-    --redN: #DA4322;
-    --greenN: #148F3A;
-    --yellowN: #F5E827;
-    --blueN: #138ACC;
+    --redN: #BC4025;
+    --greenN: #1E7D3C;
+    --yellowN: #D1C948;
+    --blueN: #1E82B9;
     --redL: #F97A5E;
     --greenL: #61D886;
     --yellowL: #F9EF64;
     --blueL: #56B8EF;
-    --redD: #B92B0C;
-    --greenD: #076925;
-    --yellowD: #E5D704;
-    --blueD: #036DA8;
+    --redD: #A13922;
+    --greenD: #17612E;
+    --yellowD: #C2BA44;
+    --blueD: #175E85;
     --white: #ECECEC;
   }
   
