updates mon 8 may

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
     --yellowD: #C2BA44;
     --blueD: #175E85;
     --white: #ECECEC;
+    --green-bg: #001700;
+    --red-go: #A11800;
   }
   
   body {
