--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,11 @@
         grid-column: 1 / span 2;
         grid-row: 3 / span 2;
     }
+
+    #message {
+        grid-column: 1 / span 2;
+        grid-row: 3 / span 2;
+    }
     
     #board > .clrbtns:hover {
       /* transform: scale(0.99);
@@ -224,9 +229,9 @@
 
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {...}
+@media only screen and (min-width: 600px) {}
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {...}
+@media only screen and (min-width: 768px) {}
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     section > div {
@@ -240,4 +245,4 @@
       }
 }
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {...}
+@media only screen and (min-width: 1200px) {}
